--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@vituum/vite-plugin-posthtml": "^1.1.0",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.0",
     "eslint": "^8.36.0",
@@ -37,7 +38,8 @@
     "svgo": "^3.0.2",
     "vite": "^5.0.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-sprite-svg": "^1.1.0"
+    "vite-sprite-svg": "^1.1.0",
+    "vituum": "^1.1.0"
   },
   "husky": {
     "hooks": {
